...
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        view.backgroundColor = UIColor(named: "isubBackgroundColor")
        title = "Play Queue"
        
        if isModal {
            navigationItem.leftBarButtonItem = UIBarButtonItem(title: "Done", style: .done, target: self, action: #selector(dismiss(sender:)))
        }
        
        registerForNotifications()
...
        //    [alert addAction:[UIAlertAction actionWithTitle:@"Cancel" style:UIAlertActionStyleCancel handler:nil]];
        //    [self presentViewController:alert animated:YES completion:nil];
    }
    
    private func showOverwritePlaylistAlert(local: Bool, name: String) {
        //    NSString *message = [NSString stringWithFormat:@"A playlist named \"%@\" already exists. Would you like to overwrite it?", name];
        //    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Overwrite?" message:message preferredStyle:UIAlertControllerStyleAlert];
        //    [alert addAction:[UIAlertAction actionWithTitle:@"Overwrite" style:UIAlertActionStyleDestructive handler:^(UIAlertAction * _Nonnull action) {
        //        // If yes, overwrite the playlist
        //        if (self.savePlaylistLocal || settingsS.isOfflineMode) {
        //            NSString *databaseName = settingsS.isOfflineMode ? @"offlineCurrentPlaylist.db" : [NSString stringWithFormat:@"%@currentPlaylist.db", settingsS.urlString.md5];
        //            NSString *currTable = settingsS.isJukeboxEnabled ? @"jukeboxCurrentPlaylist" : @"currentPlaylist";
        //            NSString *shufTable = settingsS.isJukeboxEnabled ? @"jukeboxShufflePlaylist" : @"shufflePlaylist";
        //            NSString *table = PlayQueue.shared.isShuffle ? shufTable : currTable;
...
        if saveEditHeader.deleteLabel.isHidden {
            if !isEditing {
                if Settings.shared().isOfflineMode {
                    showSavePlaylistAlert(local: true)
                } else {
                    let message = "Would you like to save this playlist to your device or to your Subsonic server?"
                    let alert = UIAlertController(title: "Playlist Location", message: message, preferredStyle: .alert)
                    alert.addAction(UIAlertAction(title: "Local", style: .default, handler: { _ in
                        self.showSavePlaylistAlert(local: true)
                    }))
                    alert.addAction(UIAlertAction(title: "Server", style: .default, handler: { _ in
                        self.showSavePlaylistAlert(local: false)
                    }))
                    alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
                    present(alert, animated: true, completion: nil)
                }
            }
...
