...
    private enum TabType: Int, CaseIterable {
        case folders = 0, artists, bookmarks, browse
        var name: String {
            switch self {
            case .folders:   return "Folders"
            case .artists:   return "Artists"
            case .bookmarks: return "Bookmarks"
            case .browse:    return "Browse"
            }
        }
    }

    @Injected private var settings: SavedSettings
...
