...

final class DownloadsViewController: TabmanViewController {
    private enum TabType: Int, CaseIterable {
        case folders = 0, artists, albums, songs, queue
        var name: String {
            switch self {
            case .folders: return "Folders"
            case .artists: return "Artists"
            case .albums:  return "Albums"
            case .songs:   return "Songs"
            case .queue:   return "Download Queue"
            }
        }
...
