...
        guard isEditing != editing else { return }
        
        isEditing = editing
        if editing {
            editLabel.backgroundColor = UIColor(red: 0.008, green: 0.46, blue: 0.933, alpha: 1)
            editLabel.textColor = .label
            editLabel.text = "Done"
            selectedCount = 0
        } else {
            editLabel.backgroundColor = .clear
            editLabel.textColor = .systemBlue
            editLabel.text = "Edit"
        }
...
